2014-10-16  Alan Mackenzie  <acm@muc.de>

	* cus-edit.el (custom-command-apply): Specify the return value in
	the doc string.
	(Custom-reset-standard): Save custom-file (e.g. .emacs) only when
	custom-command-apply has returned non-nil.

2014-10-15  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/eldoc.el (global-eldoc-mode): Enable by default.
	Remove incorrect handling of eldoc-print-after-edit.
	(eldoc-message-commands, eldoc-last-data): Use defvar.
	* loadup.el (emacs-lisp/eldoc): Load it.

	* progmodes/m4-mode.el (m4-syntax-propertize): New var.
	(m4-mode): Use it.
	(m4--quoted-p): New function.
	(m4-font-lock-keywords): Don't handle #..\n comments any more.
	(m4-mode-syntax-table): Use punctuation syntax (according to m4 manual)
	for most special characters.

	* progmodes/compile.el (compilation--previous-directory): Simplify.
	(compilation-next-error): Ensure the parse before we look at
	compilation-message property.

2014-10-15  Eli Zaretskii  <eliz@gnu.org>

	* simple.el (what-cursor-position):
	* descr-text.el (describe-char): Update to support the new bidi
	characters.

	* emacs-lisp/tabulated-list.el (tabulated-list-mode):
	Force bidi-paragraph-direction to 'left-to-right'.  This fixes
	buffer-menu display when the first buffer happens to start with
	R2L letter.

2014-10-15  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/elisp-mode.el (elisp--local-variables-1):
	Handle quoted expressions (bug#18688).

2014-10-14  Jérémy Compostella  <jeremy.compostella@intel.com>
	    Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp-sh.el (tramp-open-connection-setup-interactive-shell):
	Reduce the amount of set environment variable commands.

2014-10-12  Fabián Ezequiel Gallina  <fgallina@gnu.org>

	Fix import completion.  (Bug#18582)
	* progmodes/python.el (python-shell-completion-get-completions):
	Fix import case regexp.

2014-10-12  Stefan Monnier  <monnier@iro.umontreal.ca>
