@@ -495,12 +495,13 @@ with L, LRE, or LRO Unicode bidi character type.")
 			(modify-category-entry key ?L))))
 		    table)))
 
-;; Load uni-mirrored.el if available, so that it gets dumped into
-;; Emacs.  This allows to start Emacs with force-load-messages in
-;; ~/.emacs, and avoid infinite recursion in bidi_initialize, which
-;; needs to load uni-mirrored.el in order to display the "Loading"
-;; messages.
+;; Load uni-mirrored.el and uni-brackets.el if available, so that they
+;; get dumped into Emacs.  This allows to start Emacs with
+;; force-load-messages in ~/.emacs, and avoid infinite recursion in
+;; bidi_initialize, which needs to load uni-mirrored.el and
+;; uni-brackets.el in order to display the "Loading" messages.
 (unicode-property-table-internal 'mirroring)
+(unicode-property-table-internal 'bracket-type)
 
 ;; Latin
 
