@@ -1,3 +1,8 @@
+2014-10-16  Eli Zaretskii  <eliz@gnu.org>
+
+	* international/characters.el (bracket-type): Force pre-loading of
+	uni-brackets.el.
+
 2014-10-16  Alan Mackenzie  <acm@muc.de>
 
 	* cus-edit.el (custom-command-apply): Specify the return value in
